2014-02-07  Mark Lam  <mark.lam@apple.com>

        Revert workaround committed in http://trac.webkit.org/r163595.
        <https://webkit.org/b/128408>

        Reviewed by Geoffrey Garen.

        Now that we have fixed the bugs in JSLock's stack limit adjusments
        in https://bugs.webkit.org/show_bug.cgi?id=128406, we can revert the
        workaround in r163595.

        * API/JSContextRef.cpp:
        (JSContextGroupCreate):
        (JSGlobalContextCreateInGroup):
        * API/tests/testapi.js:
        * runtime/VM.cpp:
        (JSC::VM::VM):
        (JSC::VM::updateStackLimitWithReservedZoneSize):
        * runtime/VM.h:

2014-02-07  Mark Lam  <mark.lam@apple.com>

        Fix bug in stack limit adjustments in JSLock.
        <https://webkit.org/b/128406>

        Reviewed by Geoffrey Garen.

        1. JSLock::unlock() was only clearing the VM::stackPointerAtEntry when
           m_vm->stackPointerAtVMEntry == entryStackPointer. FYI,
           entryStackPointer is a field in JSLock.

           When DropAllLocks::~DropAllLocks() will call JSLock::grabAllLocks()
           to relock the JSLock, JSLock::grabAllLocks() will set a new
           entryStackPointer value. Thereafter, DropAllLocks::~DropAllLocks() will
           restore the saved VM::stackPointerAtEntry, which will now defer from
           the JSLock's entryStackPointer value.

           It turns out that when m_vm->stackPointerAtVMEntry was initialized,
           it was set to whatever value entryStackPointer is set to. At no time
           do we ever expect the 2 values to differ. The only time it differs is
           when this bug manifests.

           The fix is to remove the entryStackPointer field in JSLock and its uses
           altogether.

        2. DropAllLocks was unconditionally clearing VM::stackPointerAtEntry in
           its constructor instead of letting JSLock::unlock() do the clearing.
