@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2005, 2008, 2009 Apple Inc. All rights reserved.
+ * Copyright (C) 2005, 2008, 2009, 2014 Apple Inc. All rights reserved.
  *
  * This library is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Library General Public
@@ -123,7 +123,6 @@ namespace JSC {
         intptr_t m_lockCount;
         unsigned m_lockDropDepth;
         VM* m_vm;
-        void* entryStackPointer;
     };
 
 } // namespace
